Menu photos fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Jomar0019.github.io/foodie",
+  "homepage": "http://Jomar0019.github.io/Foodie",
   "name": "foods",
   "version": "0.1.0",
   "private": true,
